--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,6 @@
 
 <p>This is a paragraph on the home page</p>
 
-<ul>
-    <ul>Item 1</ul>
-    <ul>Item 2</ul>
-    <ul>Item 3</ul>
-</ul>
 
-<%= link_to "About", about_path %>
+
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
